--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.3.0",
-    "react-icons-kit": "^1.1.5"
+    "react-icons-kit": "^1.1.5",
+    "react-router-dom": "^4.3.1"
   }
 }
