--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.3.0",
+    "axios": "^0.18.0",
+    "cross-fetch": "^2.2.2",
     "react-icons-kit": "^1.1.5",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux-thunk": "^2.3.0"
   }
 }
