--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "redux-react-boilerplate-2018",
+  "name": "lagom",
   "version": "1.0.0",
-  "description": "Redux enabled boilerplate with React, ReactBootstrap, Babel and Webpack",
+  "description": "nothing to see here",
+  "main": "src/index.jsx",
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "watch": "webpack --watch",
@@ -10,32 +11,37 @@
   "keywords": [],
   "author": "hydrocarbons",
   "license": "MIT",
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.9",
-    "file-loader": "^1.1.6",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
-    "style-loader": "^0.20.2",
+    "redux": "^4.0.0",
+    "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1"
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@material-ui/core": "^1.3.0",
+    "@material-ui/core": "^3.1.1",
     "axios": "^0.18.0",
     "cross-fetch": "^2.2.2",
     "react-icons-kit": "^1.1.5",
