--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^2.0.1",
+    "compression-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
@@ -48,7 +49,7 @@
     "react-test-renderer": "^16.8.6",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
-    "uglifyjs-webpack-plugin": "^2.1.2",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
