--- a/.eslintrc
+++ b/.eslintrc
@@ -8,12 +8,16 @@
   "rules": {
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "warn",
+    /* remove when bug fixed https://github.com/babel/babel-eslint/issues/530 */
     "object-curly-newline": "warn",
+    "template-curly-spacing": "off",
+    "indent": "off",
     "max-len": "warn",
   },
   "globals": {
     "window": true,
     "document": true,
     "localStorage": true,
+    "API_URL": true,
   }
 }
