--- a/package.json
+++ b/package.json
@@ -62,12 +62,12 @@
   "dependencies": {
     "axios": "^0.18.1",
     "babel-runtime": "^6.26.0",
+    "jwt-decode": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons-kit": "^1.3.1",
     "react-recaptcha": "^2.3.10",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8"
+    "react-router-dom": "^5.1.2"
   }
 }
