--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons-kit": "^1.3.1",
+    "react-indiana-drag-scroll": "^1.6.1",
     "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.1.2"
   }
