--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.7.1",
     "react-test-renderer": "^16.8.6",
+    "redux-devtools": "^3.5.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
@@ -71,6 +72,11 @@
     "react-icons-kit": "^1.3.1",
     "react-indiana-drag-scroll": "^1.6.1",
     "react-recaptcha": "^2.3.10",
-    "react-router-dom": "^5.1.2"
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   }
 }
