--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   "rules": {
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "warn",
+    "no-shadow": "off",
     /* remove when bug fixed https://github.com/babel/babel-eslint/issues/530 */
     "object-curly-newline": "warn",
     "template-curly-spacing": "off",
