--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "plugins": [
       "@babel/plugin-proposal-class-properties",
       "@babel/plugin-transform-runtime",
-      "@babel/plugin-proposal-optional-chaining"
+      "@babel/plugin-proposal-optional-chaining",
+      "babel-plugin-styled-components"
     ]
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.4",
+    "babel-plugin-styled-components": "^1.11.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^2.0.1",
@@ -71,12 +73,12 @@
     "react-dom": "^16.8.6",
     "react-icons-kit": "^1.3.1",
     "react-indiana-drag-scroll": "^1.6.1",
-    "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.1"
   }
 }
